--- a/res/layout/schedule_an_event.xml
+++ b/res/layout/schedule_an_event.xml
@@ -20,7 +20,7 @@
 
   		    <!-- Logo Start -->
 
-  		    <ImageView android:src="@drawable/title"
+  		    <ImageView android:src="@drawable/logo"
   							android:layout_width="wrap_content"
   							android:layout_height="wrap_content"
   							android:layout_marginLeft="10dip"/>
