--- a/res/layout/timecoordinator.xml
+++ b/res/layout/timecoordinator.xml
@@ -48,6 +48,7 @@
 		  		android:layout_width="fill_parent"
 		  		android:layout_height="wrap_content"
 		  		android:layout_marginTop="10dip"
+		  		  android:onClick="loginactivity"
 		  		android:text="GET STARTED"/>
 		  <!-- Link to Login Screen -->
 		   
