--- a/res/layout/initiated.xml
+++ b/res/layout/initiated.xml
@@ -17,7 +17,7 @@
         android:id="@+id/button1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="schedule_an_event"
+        android:onClick="checksche"
         android:text="go next" />
     
 </LinearLayout>
