--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -62,7 +62,7 @@
 		  		android:layout_width="fill_parent"
 		  		android:layout_height="wrap_content"
 		  		android:layout_marginTop="10dip"
-		  		android:onClick="login"
+		  		android:onClick="mymeet"
 		  		android:text="Login"/>
 		  <!-- Link to Registration Screen -->		
 		  <TextView android:id="@+id/link_to_register" 
